--- a/examen_21441172/app/views/locations/index.html.erb
+++ b/examen_21441172/app/views/locations/index.html.erb
@@ -9,6 +9,7 @@
   <% @locations.each do |location| %>
     <tr>
       <td><%= location.name %></td>
+      <td><%= render location.recordings %></td>
       <td><%= link_to 'Show', location_path(location) %></td>
       <td><%= link_to 'Edit', edit_location_path(location) %></td>
       <td><%= link_to 'Destroy', location_path(location),
